# tosuto

./: CMakeLists.txt  README.md  build.bat  main.cpp  out.txt  test.ami  test.pico  test.tosuto
src/: ami.cpp  ami.h  interpret.cpp  interpret.h  lex.cpp  lex.h  parse.cpp  parse.h  rigtorp.h  tosuto.cpp  tosuto.h  value.cpp  value.h
src/treewalk/: interpret.cpp  interpret.h  lex.h  parse.cpp  parse.h  scan.cpp  value.cpp  value.h
src/vm/: compile.cpp  compile.h  deserialize.h  scan.h  serialize.cpp  serialize.h  value.cpp  value.h  vm.cpp  vm.h
tests/: diacritics.ami  diacritics.tosuto  half-width-katakana.ami
